tests/parser/define.1.bad.error
error: Malformed definition
  --> test:4:0
   |
 4 |  (define)
   |  ^^^^^^^^ expected define body
