tests/parser/define.1.bad.coalton
;; BAD: Invalid define
(package test-package)

(define)
